# src/swagger.json
@@ -37,7 +37,7 @@
     },
     "/movies/add": {
       "post": {
-        "tags": ["Healthcheck"],
+        "tags": ["Movies"],
         "summary": "Create a new movie",
         "consumes": ["application/json"],
         "produces": ["application/json"],
@@ -79,6 +79,9 @@
                 "director": {
                   "type": "string"
                 },
+                "plot": {
+                  "type": "string"
+                },
                 "release_year": {
                   "type": "integer",
                   "minimum": 1900,
@@ -92,7 +95,14 @@
                   "minimum": 0,
                   "maximum": 5
                 }
-              }
+              },
+              "required": [
+                "title",
+                "plot",
+                "rating",
+                "release_year",
+                "director"
+              ]
             }
           }
         ],
@@ -145,8 +155,8 @@
     },
     "/movies/list": {
       "get": {
-        "tags": ["Healthcheck"],
-        "summary": "Create a new movie",
+        "tags": ["Movies"],
+        "summary": "Get movie list based on pagination, genre, rating and release_year",
         "parameters": [
           {
             "name": "page",
@@ -265,7 +275,151 @@
               }
             }
           },
-          "400": {}
+          "400": {
+            "description": "Invalid parameters"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/movies/{id}/": {
+      "patch": {
+        "tags": ["Movies"],
+        "summary": "Get movie list based on pagination, genre, rating and release_year",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Movie object",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string"
+                },
+                "genre": {
+                  "type": "string",
+                  "enum": [
+                    "action",
+                    "adventure",
+                    "animation",
+                    "comedy",
+                    "crime",
+                    "documentary",
+                    "drama",
+                    "family",
+                    "fantasy",
+                    "horror",
+                    "musical",
+                    "mystery",
+                    "romance",
+                    "science_fiction",
+                    "thriller",
+                    "war",
+                    "western",
+                    "other"
+                  ]
+                },
+                "director": {
+                  "type": "string"
+                },
+                "release_year": {
+                  "type": "integer",
+                  "minimum": 1900,
+                  "maximum": 2023
+                },
+                "runtime": {
+                  "type": "integer"
+                },
+                "rating": {
+                  "type": "integer",
+                  "minimum": 0,
+                  "maximum": 5
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "title": {
+                      "type": "string"
+                    },
+                    "genre": {
+                      "type": "string"
+                    },
+                    "director": {
+                      "type": "string"
+                    },
+                    "release_year": {
+                      "type": "integer"
+                    },
+                    "runtime": {
+                      "type": "integer"
+                    },
+                    "rating": {
+                      "type": "integer"
+                    },
+                    "created_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "updated_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid parameters"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/movies/{id}": {
+      "delete": {
+        "tags": ["Movies"],
+        "summary": "Delete a movie",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of the movie to delete",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Movie deleted successfully"
+          },
+          "404": {
+            "description": "Movie not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
         }
       }
     }
